--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dimforge/rapier3d": "^0.11.2",
-    "@dimforge/rapier3d-compat": "^0.11.2",
+    "@dimforge/rapier3d": "0.0.0-3b7484f-20230325",
+    "@dimforge/rapier3d-compat": "0.0.0-3b7484f-20230325",
     "@react-three/drei": "^9.84.2",
     "@react-three/fiber": "^8.14.2",
     "@react-three/rapier": "^1.1.1",
     "@types/three": "^0.156.0",
     "eslint-plugin-react": "^7.33.2",
+    "leva": "^0.9.35",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
